--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Gallery</title>
 </head>
 <body>
+
+<h2>Base</h2>
 
 </body>
 </html>
