--- a/portfolio/static/css/styles.css
+++ b/portfolio/static/css/styles.css
@@ -1,12 +1,18 @@
 body{
-    background-image: url("../image/temple.jpg");
+    background-image: url("../image/ed.jpg");
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
 
 }
 .top{
     background-color: #263449;
     height: 100%;
+    opacity: 0.7;
+
 
 }
+
 #top{
     text-align: center;
 
@@ -92,10 +98,17 @@ h3{
 #skills{
 
     text-align: center;
+    color: orange;
 }
 
 .skills{
     width: 45%;
+
+}
+#skill-cont{
+    background-color: white;
+    width: 100%;
+    opacity: 0.9;
 }
 .bot{
      background-color: #263449;
@@ -111,15 +124,33 @@ h3{
     margin-bottom: 0px;
 }
 #contacts{
-    color: white;
+    color: orange;
 }
 #brian{
     font-size: 790%;
-    color: white;
+    color: orange;
 }
 .about{
     text-align: center;
+    color: white;
+    margin-top: 10%;
+    background-color: white;
+    padding-top: 30px;
+    color: black;
+    overflow: hidden;
+}
+.about h1{
+    color: orange;
 }
 #about{
-    font-size: 200%;
+    font-family: 'Tangerine', serif;
+  font-size: 28px;
+  text-shadow: 4px 4px 4px #aaa;
+
+}
+#body{
+    background-color: white;
+}
+#projects{
+    color: orange;
 }
