--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <link rel="shortcut icon" href="../static/image/sigi.jpeg" style="border-radius: 50%"/>
 
+
     {% block styles %}
         {% bootstrap_css %}
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -21,6 +22,8 @@
 {#    <img src="{% static 'image/sigi.jpeg' %}" id="sigi" style="border-radius: 50%">#}
     <h1 id="brian">Brian Sigilai</h1>
     <h4>Full stack developer</h4>
+     <img src="{% static 'image/sigi.jpeg' %}" style="border-radius: 50%;width: 295px;" >
+
 </div>
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -28,6 +31,7 @@
     {% endblock %}
 
 </div>
+<div id="body">
 <div class="about">
     <h1>About me</h1>
     <p id="about">I am passionate about using technology to solve world problems and when am not coding I love Swimming and Hiking
@@ -37,13 +41,13 @@
    <section class="gallery-block cards-gallery">
 	    <div class="container">
 	        <div class="heading">
-	          <h2>Projects</h2>
+	          <h2 id="projects">Projects</h2>
 	        </div>
 	        <div class="row">
                 {% for img in images %}
-	            <div class="col-md-6 col-lg-4">
-	                <div class="card border-0 transform-on-hover">
-	                	<a class="lightbox" href="../img/image1.jpg">
+	            <div class="col-xs-8 col-md-6 col-lg-4"  >
+	                <div class="card border-0 transform-on-hover" >
+	                	<a class="lightbox" href="{{ img.link }}">
 	                		<img src="{{ img.post_image.url }}" alt="Card Image" class="card-img-top" width="100%" height="100%">
 	                	</a>
 	                    <div class="card-body">
@@ -57,37 +61,39 @@
 	    </div>
     </section>
 
-<h1 id="skills">Skills</h1>
-<div class="container">
+
+<div class="container" id="skill-cont">
+    <h1 id="skills">Skills</h1>
     <div class="row">
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-5 col-lg-3">
      <img src="{% static 'image/js.png' %}" class="skills" >
         </div>
-         <div class="col-md-6 col-lg-4">
+        <div class="col-md-5 col-lg-3">
 <img src="{% static 'image/ang.png' %}" class="skills">
         </div>
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-5 col-lg-3">
 <img src="{% static 'image/kot.png' %}" class="skills">
           </div>
-         <div class="col-md-6 col-lg-4">
+      <div class="col-md-5 col-lg-3">
 <img src="{% static 'image/boot.png' %}" class="skills">
          </div>
-         <div class="col-md-6 col-lg-4">
+         <div class="col-md-5 col-lg-3">
 <img src="{% static 'image/py.png' %}" class="skills">
          </div>
-         <div class="col-md-6 col-lg-4">
- <img src="{% static 'image/jango.png' %}" class="skills">
+         <div class="col-md-5 col-lg-3">
+  <img src="{% static 'image/php.png' %}" class="skills">
          </div>
-         <div class="col-md-6 col-lg-4">
+         <div class="col-md-5 col-lg-3">
  <img src="{% static 'image/flask-logo.png' %}" class="skills">
          </div>
-         <div class="col-md-6 col-lg-4">
- <img src="{% static 'image/php.png' %}" class="skills">
+       <div class="col-md-5 col-lg-3">
+           <img src="{% static 'image/jango.png' %}" class="skills">
+
          </div>
-         <div class="col-md-6 col-lg-4">
+         <div class="col-md-5 col-lg-3">
  <img src="{% static 'image/postgresql.png' %}" class="skills">
          </div>
-         <div class="col-md-6 col-lg-4">
+         <div class="col-md-5 col-lg-3">
 <img src="{% static 'image/mysql.png' %}" class="skills">
          </div>
     </div>
@@ -95,12 +101,12 @@
 <div class="bot">
 <h1 id="contacts">Contacts</h1>
     <h2><span class="glyphicon glyphicon-map-marker"></span>Nairobi</h2>
-    <h2>briansigilai@gmail.com</h2>
-    <h2>+254792071275</h2>
+    <h2> <span class="glyphicon glyphicon-envelope"></span>briansigilai@gmail.com</h2>
+    <h2> <span class="glyphicon glyphicon-phone"></span>+254792071275</h2>
 <p class="bot-text">&copy;Brian Kiprono Sigilai {% now "Y" %}</p>
 </div>
 
 
-
+</div>
 </body>
 </html>
